statistics part done

--- a/index.html
+++ b/index.html
@@ -112,7 +112,38 @@
       </div>
     </main>
     <!-- ===== banner-part end ===== -->
-    
+    <!-- ===== statistics-part start ===== -->
+    <section id="statistics_part" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="stat-box text-center">
+              <p class="number">150</p>
+              <h3>Total Enrollment</h3>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="stat-box text-center">
+              <p class="number">25</p>
+              <h3>courses</h3>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="stat-box text-center">
+              <p class="number">150</p>
+              <h3>students</h3>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="stat-box text-center">
+              <p class="number">25</p>
+              <h3>Trainers</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== statistics-part end ===== -->
     <!-- ===== footer-part start ===== -->
     <footer id="footer_part"></footer>
     <!-- ===== footer-part end ===== -->
