success-part done

--- a/index.html
+++ b/index.html
@@ -478,6 +478,98 @@
       </div>
     </section>
     <!-- ===== top-category-part end ===== -->
+    <!-- ===== success-story-part start ===== -->
+    <section id="success-part" class="section-padding">
+      <div class="container">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-6">
+            <div class="success-part-left">
+              <h3>Success Stories</h3>
+              <p>
+                Coming from all walks of life, our graduates have something in
+                common: they decided to learn with us to pursue their dreams.
+              </p>
+              <a href="#" class="theme-btn">view all stories</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="success-part-content">
+              <div class="swiper mySwiperOne">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="review-box text-center">
+                      <div class="student-img">
+                        <img
+                          src="assets/image/author-1.png"
+                          alt="student-img"
+                          class="img-fluid"
+                        />
+                      </div>
+                      <div class="student-review mt-2">
+                        <h5>Student Name</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Saepe voluptatem, suscipit placeat eligendi
+                          fugiat rem repellendus eius numquam quibusdam in eum
+                          nesciunt quo rerum atque modi dolor quia debitis
+                          deserunt expedita consequuntur sequi repellat ea.
+                          Velit explicabo in rem dolor.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="review-box text-center">
+                      <div class="student-img">
+                        <img
+                          src="assets/image/author-2.png"
+                          alt="student-img"
+                          class="img-fluid"
+                        />
+                      </div>
+                      <div class="student-review mt-2">
+                        <h5>Student Name</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Saepe voluptatem, suscipit placeat eligendi
+                          fugiat rem repellendus eius numquam quibusdam in eum
+                          nesciunt quo rerum atque modi dolor quia debitis
+                          deserunt expedita consequuntur sequi repellat ea.
+                          Velit explicabo in rem dolor.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="review-box text-center">
+                      <div class="student-img">
+                        <img
+                          src="assets/image/author-3.png"
+                          alt="student-img"
+                          class="img-fluid"
+                        />
+                      </div>
+                      <div class="student-review mt-2">
+                        <h5>Student Name</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Saepe voluptatem, suscipit placeat eligendi
+                          fugiat rem repellendus eius numquam quibusdam in eum
+                          nesciunt quo rerum atque modi dolor quia debitis
+                          deserunt expedita consequuntur sequi repellat ea.
+                          Velit explicabo in rem dolor.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== success-story-part end ===== -->
     <!-- ===== footer-part start ===== -->
     <footer id="footer_part"></footer>
     <!-- ===== footer-part end ===== -->
