become-instructor-part done

--- a/index.html
+++ b/index.html
@@ -396,7 +396,9 @@
                 successful career. This seminar will clear all your confusion
                 through question and answer.
               </p>
-              <a href="#" class="theme-btn">start learning</a>
+              <a href="#" class="theme-btn"
+                >start learning <i class="fa-solid fa-arrow-right"></i
+              ></a>
             </div>
           </div>
           <div class="col-md-6">
@@ -489,7 +491,9 @@
                 Coming from all walks of life, our graduates have something in
                 common: they decided to learn with us to pursue their dreams.
               </p>
-              <a href="#" class="theme-btn">view all stories</a>
+              <a href="#" class="theme-btn"
+                >view all stories <i class="fa-solid fa-arrow-right"></i
+              ></a>
             </div>
           </div>
           <div class="col-md-6">
@@ -570,6 +574,26 @@
       </div>
     </section>
     <!-- ===== success-story-part end ===== -->
+    <!-- ===== become-instructor-part start ===== -->
+    <section id="become-instructor-part" class="become-instructor">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="instructor-content">
+              <h2>Become an instructor</h2>
+              <p>
+                Create an online video course and earn money by teaching people
+                around the world.
+              </p>
+              <a href="#" class="theme-btn"
+                >Become an instructor <i class="fa-solid fa-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== become-instructor-part end ===== -->
     <!-- ===== footer-part start ===== -->
     <footer id="footer_part"></footer>
     <!-- ===== footer-part end ===== -->
