news and events done

--- a/index.html
+++ b/index.html
@@ -594,6 +594,105 @@
       </div>
     </section>
     <!-- ===== become-instructor-part end ===== -->
+    <!-- ===== news-events-part start ===== -->
+    <section id="news-events-part" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>News & Events</h2>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/news1.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <span>04 May 2023</span>
+                <h5>News Heading Here</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/news2.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <span>04 May 2023</span>
+                <h5>News Heading Here</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/news3.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <span>04 May 2023</span>
+                <h5>News Heading Here</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/news5.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <span>04 May 2023</span>
+                <h5>News Heading Here</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== news-events-part end ===== -->
     <!-- ===== footer-part start ===== -->
     <footer id="footer_part"></footer>
     <!-- ===== footer-part end ===== -->
