--- a/index.html
+++ b/index.html
@@ -694,7 +694,101 @@
     </section>
     <!-- ===== news-events-part end ===== -->
     <!-- ===== footer-part start ===== -->
-    <footer id="footer_part"></footer>
+    <footer id="footer_part" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="footer-logo">
+              <a href="#"
+                ><img
+                  src="assets/image/logo.png"
+                  alt="footer-logo"
+                  class="img-fluid"
+              /></a>
+              <p>
+                Training Pundit provides actual training on IT and Soft skill
+                developments.
+              </p>
+
+              <p>
+                Training Pandit provides online IT and soft skills development
+                training.
+              </p>
+              <ul class="social-link">
+                <li>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li class="ms-2">
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li class="ms-2">
+                  <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
+                <li class="ms-2">
+                  <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="footer-links">
+              <h4>Quick Links</h4>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Trainers</a></li>
+                <li><a href="#">Contact us</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="footer-links">
+              <h4>Courses</h4>
+              <ul>
+                <li><a href="#">Responsive web design</a></li>
+                <li><a href="#">Web Development</a></li>
+                <li><a href="#">Graphic Design</a></li>
+                <li><a href="#">SEO and Degital Marketing</a></li>
+                <li><a href="#">certification</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="address-part">
+              <h4>Communication</h4>
+              <div class="row">
+                <div class="col-1">
+                  <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <div class="col-11">
+                  <p>
+                    3rd floor,125 KB Fozlul Kader Road(Near Oli kha mosque)
+                    Chattogram, Bangladesh
+                  </p>
+                </div>
+              </div>
+              <div class="row mt-1">
+                <div class="col-1">
+                  <i class="fa-solid fa-phone"></i>
+                </div>
+                <div class="col-11">
+                  <p>01531-884554</p>
+                </div>
+              </div>
+              <div class="row mt-1">
+                <div class="col-1">
+                  <i class="fa-regular fa-envelope"></i>
+                </div>
+                <div class="col-11">
+                  <p>info@trainingpundit.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- ===== footer-part end ===== -->
 
     <!-- ===== jquery link ===== -->
