--- a/index.html
+++ b/index.html
@@ -762,10 +762,10 @@
                   <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <div class="col-11">
-                  <p>
+                  <address>
                     3rd floor,125 KB Fozlul Kader Road(Near Oli kha mosque)
                     Chattogram, Bangladesh
-                  </p>
+                  </address>
                 </div>
               </div>
               <div class="row mt-1">
@@ -790,6 +790,52 @@
       </div>
     </footer>
     <!-- ===== footer-part end ===== -->
+    <!-- ===== copyright-part start ===== -->
+    <section id="copyright-part" class="py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <p>
+              Copyright © 2023 Training Pundit - Education LMS theme by <a href="#">Training
+                Pundit</a>
+            </p>
+          </div>
+          <div class="col-md-2 offset-md-4">
+            <div class="partners row">
+              <div class="col">
+                <img
+                  src="assets/image/partner.jpg"
+                  alt="partner-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col">
+                <img
+                  src="assets/image/partner1.jpg"
+                  alt="partner-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col">
+                <img
+                  src="assets/image/partner2.jpg"
+                  alt="partner-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col">
+                <img
+                  src="assets/image/partner3.jpg"
+                  alt="partner-img"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== copyright-part end ===== -->
 
     <!-- ===== jquery link ===== -->
     <script src="assets/js/jquery.min.js"></script>
