top instructor part and partical js add

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
           </div>
         </div>
       </div>
+      <div id="particles-js"></div>
     </section>
     <!-- ===== statistics-part end ===== -->
     <!-- ===== setyourgoal-part start ===== -->
@@ -594,6 +595,107 @@
       </div>
     </section>
     <!-- ===== become-instructor-part end ===== -->
+    <!-- ===== top-instructor-part start ===== -->
+    <section id="top-instructor" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>Our Top instructors</h2>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/sumit.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <h5>Instructor Name Here</h5>
+                <p>
+                  About instructor Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/hasin.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <h5>Instructor Name Here</h5>
+                <p>
+                  About instructor Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/rabbil.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <h5>Instructor Name Here</h5>
+                <p>
+                  About instructor Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card news-box">
+              <div class="news-box-img">
+                <img
+                  src="assets/image/stacklearner.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="news-box-content">
+                <h5>Instructor Name Here</h5>
+                <p>
+                  About instructor Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="card-button text-center">
+            <a href="#">See More Instructors</a>
+          </div>
+        </div>
+      </div>
+      <div id="particles-js"></div>
+    </section>
+    <!-- ===== top-instructor-part end ===== -->
     <!-- ===== news-events-part start ===== -->
     <section id="news-events-part" class="section-padding">
       <div class="container">
@@ -693,6 +795,56 @@
       </div>
     </section>
     <!-- ===== news-events-part end ===== -->
+    <!-- ===== partners-part start ===== -->
+    <section id="partners-part" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <img
+              src="assets/image/partner.jpg"
+              alt="partner-img"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-2">
+            <img
+              src="assets/image/partner1.jpg"
+              alt="partner-img"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-2">
+            <img
+              src="assets/image/partner2.jpg"
+              alt="partner-img"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-2">
+            <img
+              src="assets/image/partner3.jpg"
+              alt="partner-img"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-2">
+            <img
+              src="assets/image/partner.jpg"
+              alt="partner-img"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-2">
+            <img
+              src="assets/image/partner1.jpg"
+              alt="partner-img"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== partners-part end ===== -->
     <!-- ===== footer-part start ===== -->
     <footer id="footer_part" class="section-padding">
       <div class="container">
@@ -796,8 +948,8 @@
         <div class="row">
           <div class="col-md-6">
             <p>
-              Copyright © 2023 Training Pundit - Education LMS theme by <a href="#">Training
-                Pundit</a>
+              Copyright © 2023 Training Pundit - Education LMS theme by
+              <a href="#">Training Pundit</a>
             </p>
           </div>
           <div class="col-md-2 offset-md-4">
@@ -843,6 +995,9 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- ===== swiper js link ===== -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- ===== partical js link ===== -->
+    <script src="assets/js/particles.js"></script>
+    <script src="assets/js/app.js"></script>
     <!-- ===== main js link ===== -->
     <script src="assets/js/main.js"></script>
   </body>
