counter js add and partical js error fix

--- a/contact.html
+++ b/contact.html
@@ -465,6 +465,9 @@
     <script src="assets/js/app.js"></script>
     <!-- ===== venobox js link ===== -->
     <script src="assets/js/venobox.min.js"></script>
+    <!-- ===== counter js link ===== -->
+    <script src="assets/js/waypoints.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
     <!-- ===== main js link ===== -->
     <script src="assets/js/main.js"></script>
   </body>
