--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -156,25 +158,25 @@
         <div class="row">
           <div class="col-md-3">
             <div class="stat-box text-center">
-              <p class="number">150</p>
+              <p class="number counter">150</p>
               <h3>Total Enrollment</h3>
             </div>
           </div>
           <div class="col-md-3">
             <div class="stat-box text-center">
-              <p class="number">25</p>
+              <p class="number counter">250</p>
               <h3>courses</h3>
             </div>
           </div>
           <div class="col-md-3">
             <div class="stat-box text-center">
-              <p class="number">150</p>
+              <p class="number counter">150</p>
               <h3>students</h3>
             </div>
           </div>
           <div class="col-md-3">
             <div class="stat-box text-center">
-              <p class="number">25</p>
+              <p class="number counter">250</p>
               <h3>Trainers</h3>
             </div>
           </div>
@@ -997,6 +999,7 @@
 
     <!-- ===== jquery link ===== -->
     <script src="assets/js/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <!-- ===== bootstrap js link ===== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- ===== swiper js link ===== -->
@@ -1006,6 +1009,9 @@
     <script src="assets/js/app.js"></script>
     <!-- ===== venobox js link ===== -->
     <script src="assets/js/venobox.min.js"></script>
+    <!-- ===== counter js link ===== -->
+    <script src="assets/js/waypoints.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
     <!-- ===== main js link ===== -->
     <script src="assets/js/main.js"></script>
   </body>
